--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "langgraph (>=0.4.1,<0.5.0)",
     "google-search-results (>=2.4.2,<3.0.0)",
     "langchain-core (>=0.3.58,<0.4.0)",
-    "langchain-groq (>=0.2.3)"
+    "langchain-groq (>=0.2.3)",
+    "copilotkit (>=0.1.55,<0.2.0)"
 ]
 
 [tool.poetry.dependencies]
