--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -12,15 +12,47 @@ dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
     "uvicorn (>=0.34.2,<0.35.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
-    "langgraph (>=0.4.1,<0.5.0)",
     "google-search-results (>=2.4.2,<3.0.0)",
-    "langchain-core (>=0.3.58,<0.4.0)",
     "langchain-groq (>=0.2.3)",
-    "copilotkit (>=0.1.55,<0.2.0)"
+    "requests>=2.32.3",
+    "html2text>=2024.2.26",
+    "langgraph-cli[inmem]>=0.3.3",
+    "langgraph-checkpoint-sqlite>=2.0.1",
+    "aiosqlite>=0.20.0",
+    "aiohttp>=3.9.3",
+    "copilotkit>=0.1.56a3",
+    "langchain-openai>=0.2.3",
+    "langchain-community>=0.3.1",
+    "langchain-anthropic>=0.3.1",
+    "langchain-google-genai>=2.0.5",
+    "langchain>=0.3.4",
+    "openai>=1.52.1",
+    "tavily-python>=0.5.0",
+    "langchain-core>=0.3.25",
+    "langgraph==0.4.8"
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
+python = ">=3.11,<3.13"
+copilotkit = "^0.1.56a4"
+crewai = "0.118.0"
+langchain-openai = "0.2.3"
+langchain-community = "^0.3.1"
+langchain-anthropic = "0.3.17"
+langchain-google-genai = "2.0.5"
+langchain = "0.3.26"
+openai = "^1.52.1"
+tavily-python = "^0.5.0"
+python-dotenv = "^1.0.1"
+uvicorn = ">=0.31.0"
+requests = "^2.32.3"
+html2text = "^2024.2.26"
+langchain-core = "^0.3.25"
+langgraph-cli = {extras = ["inmem"], version = "^0.3.3"}
+langgraph-checkpoint-sqlite = "^2.0.1"
+aiosqlite = "^0.20.0"
+aiohttp = "^3.9.3"
+langgraph = "0.4.8"
 
 
 [build-system]
