--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@copilotkit/react-core": "^1.8.10",
-    "@copilotkit/react-ui": "^1.8.10",
-    "@copilotkit/runtime": "^1.8.10",
+    "@copilotkit/react-core": "1.9.3-next.3",
+    "@copilotkit/react-ui": "1.9.3-next.3",
+    "@copilotkit/runtime": "1.9.3-next.3",
+    "@google/genai": "^1.11.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "groq-sdk": "^0.29.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "react": "^19.0.0",
