Update author information in pyproject.toml; refactor agent.py and chat.py to remove delete node functionality; modify download.py logging message for clarity; add console log in ResearchCanvas for state debugging.

--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -3,7 +3,7 @@ name = "my-endpoint"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "John Smith",email = "qaplatformmoderator@gmail.com"}
+    {name = "Bilal",email = "mohdbilal16@gmail.com"}
 ]
 readme = "README.md"
 dependencies = [
