--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -20,4 +20,4 @@ COPY . .
 EXPOSE 8080
 
 # Start server (make sure to use host/port for Cloud Run)
-CMD ["poetry", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["poetry", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
