--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -1,41 +1,15 @@
-[project]
-name = "my-endpoint"
+[tool.poetry]
+name = "research_agent"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Bilal",email = "mohdbilal16@gmail.com"}
-]
+authors = ["Bilal <mohdbilal16@gmail.com>"]
 readme = "README.md"
-dependencies = [
-    "ag-ui-protocol (>=0.1.4,<0.2.0)",
-    "openai (>=1.77.0,<2.0.0)",
-    "fastapi (>=0.115.12,<0.116.0)",
-    "uvicorn (>=0.34.2,<0.35.0)",
-    "python-dotenv (>=1.1.0,<2.0.0)",
-    "google-search-results (>=2.4.2,<3.0.0)",
-    "langchain-groq (>=0.2.3)",
-    "requests>=2.32.3",
-    "html2text>=2024.2.26",
-    "langgraph-cli[inmem]>=0.3.3",
-    "langgraph-checkpoint-sqlite>=2.0.1",
-    "aiosqlite>=0.20.0",
-    "aiohttp>=3.9.3",
-    "copilotkit>=0.1.56a3",
-    "langchain-openai>=0.2.3",
-    "langchain-community>=0.3.1",
-    "langchain-anthropic>=0.3.1",
-    "langchain-google-genai>=2.0.5",
-    "langchain>=0.3.4",
-    "openai>=1.52.1",
-    "tavily-python>=0.5.0",
-    "langchain-core>=0.3.25",
-    "langgraph==0.4.8"
-]
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
 copilotkit = "^0.1.56a4"
-crewai = "0.118.0"
+crewai = "^0.118.0"
+fastapi = "^0.115.0"
 langchain-openai = "0.2.3"
 langchain-community = "^0.3.1"
 langchain-anthropic = "0.3.17"
@@ -53,6 +27,8 @@ langgraph-checkpoint-sqlite = "^2.0.1"
 aiosqlite = "^0.20.0"
 aiohttp = "^3.9.3"
 langgraph = "0.4.8"
+google-search-results = "^2.4.2"
+gunicorn = "^23.0.0"
 
 
 [build-system]
